--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "PT Sans Caption", sans-serif;
     background-color: #f8f9fa;
     color: #333;
     margin: 0;
